# gap-protection-platform

./: .gitignore  ADMIN_DASHBOARD_VERIFICATION_AR.md  ADMIN_TESTING_GUIDE_AR.md  ALL_REPORTS_INDEX_AR.md  COMPLETE_SUMMARY_AR.md  COMPLETE_TESTING_PLAN_AR.md  COMPLETE_VERIFICATION_REPORT_AR.md  DEPLOYMENT_GUIDE_SECURE_AR.md  DEPLOYMENT_INDEX_AR.md  DEPLOYMENT_READY_AR.md  DEPLOY_ALTERNATIVES_AR.md  DEPLOY_NOW_AR.md  FINAL_COMPLETE_SUMMARY_AR.md  FINAL_DEPLOYMENT_SUMMARY_AR.md  FINAL_VERIFICATION_SUMMARY_AR.md  FIX_CONNECTION_AR.md  GAP_PROTECTION_TECHNICAL_DOCUMENTATION_DE.md  HOW_TO_TEST_EVERYTHING_AR.md  INDEX_VERIFICATION_AR.md  NEXT_STEPS_AR.md  ONE_PAGE_SUMMARY_AR.md  PROOF_EVERYTHING_WORKS_AR.md  QUICK_DEPLOY_AR.md  QUICK_SUMMARY_AR.md  QUICK_TEST_GUIDE_AR.md  README_DEPLOY_AR.md  README_FINAL_AR.md  README_START_HERE_AR.md  README_VERIFICATION_AR.md  SCAN_PERMISSIONS_SUMMARY_AR.md  SIMPLE_UPLOAD_AR.md  SOLUTION_AR.md  START_DEPLOYMENT_AR.md  START_HERE_AR.md  TESTING_INDEX_AR.md  UPLOAD_GUIDE_AR.md  VERIFY_DEPLOYMENT_AR.md  VISUAL_SUMMARY_AR.md  build-only.py  check-live-sites.py  (+5 more)
Python-Webify/: .env.example  .gitignore  .htaccess  ARABIC_SUMMARY.md  CHANGELOG.md  DEEP_ANALYSIS_REPORT.md  DEPLOYMENT.md  Dockerfile  FINAL_SUMMARY.md  LICENSE  PRODUCTION_CHECKLIST.md  PRODUCTION_READY.md  PRODUCTION_SUMMARY_AR.md  PROJECT_COMPLETION_REPORT.md  QUICKSTART.md  QUICK_START_AR.md  README.md  README_AR.md  SECURITY.md  ULTIMATE_UPGRADE_REPORT.md  advanced_scanner.py  app.py  complete_scan.py  config.py  docker-compose.yml  health_check.py  package-lock.json  package.json  pdf_report_generator.py  pyproject.toml  reconic_wrapper.py  run_scanner.bat  scanner.py  teufel_scanner.py  tsconfig.json  ultra_advanced_scanner.py
Python-Webify/client/: index.html
Python-Webify/script/: build.ts
Python-Webify/scripts/: init_db.sql  setup.bat  setup.js  setup.sh
Python-Webify/server/: db.ts  index.ts  (+2 more)
(+5504 files in other folders)
