[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gap-protection-scanner"
version = "1.0.0"
description = "Enterprise Security Scanner for Banks and Call Centers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "GAP Protection GmbH", email = "security@gap-protection.com"}
]
keywords = ["security", "scanner", "vulnerability", "penetration-testing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.2",
    "pyyaml>=6.0",
    "reportlab>=4.0.0",
    "dnspython>=2.4.0",
    "python-whois>=0.8.0",
    "builtwith>=1.3.4",
    "requests>=2.31.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://gap-protection.com"
Documentation = "https://github.com/gap-protection/scanner"
Repository = "https://github.com/gap-protection/scanner"

[project.scripts]
gap-scan = "advanced_scanner:main"

[tool.setuptools]
packages = ["utils"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=html --cov-report=term"
